--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,5 @@
     "markdown.extension.completion.enabled": true,
     "markdown.extension.preview.autoShowPreviewToSide": false,
     "markdown.extension.toc.orderedList": true,
-    "markdown.validate.enabled": false
+    "markdown.validate.enabled": false,
 }
