--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,8 @@
 {
-   
     "markdown.extension.print.theme": "dark",
     "markdown.extension.completion.enabled": true,
     "markdown.extension.preview.autoShowPreviewToSide": false,
     "markdown.extension.toc.orderedList": true,
     "markdown.validate.enabled": false,
+    "CodeGPT.apiKey": "OpenAI",
 }
